src/test/ui/imports/extern-prelude-extern-crate-restricted-shadowing.stderr
error[E0659]: `Vec` is ambiguous (macro-expanded name vs less macro-expanded name from outer scope during import/macro resolution)
  --> $DIR/extern-prelude-extern-crate-restricted-shadowing.rs:15:9
   |
LL |         Vec::panic!(); //~ ERROR `Vec` is ambiguous
   |         ^^^ ambiguous name
   |
   = note: `Vec` could refer to a struct from prelude
note: `Vec` could also refer to the extern crate imported here
  --> $DIR/extern-prelude-extern-crate-restricted-shadowing.rs:7:9
   |
LL |         extern crate std as Vec;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^
...
LL | define_vec!();
   | -------------- in this macro invocation

error: aborting due to previous error

For more information about this error, try `rustc --explain E0659`.
